--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DadoService.cs" />
     <Compile Include="Gestor_Partida.cs" />
+    <Compile Include="Gestor_Puntaje.cs" />
     <Compile Include="Gestor_Turno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableroService.cs" />
