--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="MAPPER.cs" />
     <Compile Include="MP_USUARIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml.cs" />
+    <Compile Include="XmlBitacora.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BE\BE.csproj">
