--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -50,5 +50,8 @@
     <Compile Include="Turno.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
